- Added inbsp extension for exporting nbspstatcounters data via web interface
  (for use remotely in, e.g., collectd, rrdtool, npstats)
- Added nbspreconfigure script (mspoolbdb, reconfigure)
- Added nbspstats script
- Revised msgfilter: convert crlf -> nl, corrected README, added options
  for smtp when needed. Revised specification to allow
  <prod_regex><site_regexp> in addition to the old <prod_regex>_<zone_regexp>.
- Added output of logperiods (for stats and qstate) in nbspstatcounters
  and in the "_inbsp/stats" web interface. The script nbspstats was revised
  to accept a "-p <logperiod>" option.
- Fixed problem with filter queue growing with several slaves in
  mempsool mode (spoolslots.c missing a pthred_cond_signal() call).
- In the gpfilter, each decoder is opened with a "permanent" pipe.
- Revised (and corrected) the statistic plots: Added size in fmtoptions
  in inventory.conf (and removed set size in template files), and
  corrected the template setting for the -r option in nbspstatplot1.
- Revised nbspradmap and nbspradmapc such that the later can create
  loops from the individual images.
- Added nbspsatmapc for similar purposes and revised the web server
  to generate radar and sat loops dynamically.
- Fixed error in rstfilter.lib creating sat maps (reported by Bill Dosser);
  check of rstfilter(satmap_regex) should be with uwildmat and not just regex.
- Revised default bundle configuration of gisfilter.
- Revised and corrected: tclupperair, uafilter and wsfilter
- Revised tclgrads such that Expect is no longer used. (The Expect
  package is no longer required in the main package. It is still used
  in the sample shell applications.)

2.2.2
-
- Revision of nbspgribrsh (and the companion catalog tools)
- Added -nobody in call to filterslib in gribfilter
- Added nbspgisradmap and nbspgissatmap
- Revised msgfilter because with the tcl mime-smtp package the sms to
  mobile devices was not working correctly.