@@ -17,7 +17,9 @@
 # level in the local3 facility.  The default is ``user.err''.
 #
 ## set msgfilter(smtp,originator) "nbsp@localhost";
-## set msgfilter(smtp,options) [list]; # for other options (if needed)
+## set msgfilter(smtp,servers)	"localhost";
+## set msgfilter(smtp,options) [list]; # for other options (if needed) such as
+                                       # -username <u> -password <p> ...
 #
 ## set msgfilter(syslogid)	"nbsp-msgfilter";
 ## set msgfilter(syslogpri)	"user.err";
