@@ -16,10 +16,10 @@ lappend subscribers {
 }
 
 #
-# Example for sending the summary (S flag)
+# Example for sending the summary (S flag) to a cel phone
 #
 lappend subscribers {
-	smtp://7877589734@cingularme.com
+	smtp://7873467474@cingularme.com
 	(svs|tor)_txz14[5-9],svr_vaz014,npw_txz25[2-7]
 	S
 }
